header and typography

--- a/portal-frontend/src/app/app.component.html
+++ b/portal-frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class='site-layout'>
   <app-header></app-header>
-  <div class='main-content'>
+  <div id="appBody" class='main-content'>
     <router-outlet></router-outlet>
   </div>
-  <app-footer></app-footer>
+  <app-footer id="appFooter"></app-footer>
 </div>
