--- a/portal-frontend/src/styles.scss
+++ b/portal-frontend/src/styles.scss
@@ -16,11 +16,6 @@ body {
   scroll-behavior: smooth;
   overflow: hidden;
   margin: 0;
-
-}
-
-html {
-  font-size: 62.5% //Set here to 10px, so that 1rem = 10px
 }
 
 body {
@@ -31,3 +26,13 @@ body {
   box-sizing: border-box;
 }
 
+.display-none {
+  display: none;
+}
+
+.center {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
