--- a/portal-frontend/src/app/shared/footer/footer.component.html
+++ b/portal-frontend/src/app/shared/footer/footer.component.html
@@ -1,9 +1,11 @@
 <footer>
-  <div>Provincial Agricultural Land Commission © {{ year }}</div>
+  <div class="trademark">
+    Provincial Agricultural Land Commission © {{ year }}
+  </div>
   <div class="links">
-    <a href="">Disclaimer</a>
-    <a href="">Privacy</a>
-    <a href="">Accessibility</a>
-    <a href="">Copyright</a>
+    <a target="_blank" href="https://www2.gov.bc.ca/gov/content/home/disclaimer">Disclaimer</a>
+    <a target="_blank" href="https://www2.gov.bc.ca/gov/content/home/privacy">Privacy</a>
+    <a target="_blank" href="https://www2.gov.bc.ca/gov/content/home/accessibility">Accessibility</a>
+    <a target="_blank" href="https://www2.gov.bc.ca/gov/content/home/copyright">Copyright</a>
   </div>
 </footer>
