--- a/portal-frontend/src/styles/typography.scss
+++ b/portal-frontend/src/styles/typography.scss
@@ -51,19 +51,11 @@ a,
 p,
 .body-text {
   @include typography-style(rem(16), 400);
-  // line-height: 2.4rem;
+  line-height: rem(24);
 }
 
 .nav-text {
   @include typography-style(rem(18), 400);
-}
-
-@mixin foo {
-  // do stuff
-}
-
-%foo {
-  @include foo;
 }
 
 @mixin button-text {
