--- a/portal-frontend/src/styles/buttons.scss
+++ b/portal-frontend/src/styles/buttons.scss
@@ -2,6 +2,7 @@
 
 .mat-flat-button, .mat-stroked-button {
   font-weight: 700 !important;
+  border: rem(2) solid !important;
 }
 
 .mat-flat-button.mat-primary {
