--- a/portal-frontend/src/app/shared/header/header.component.scss
+++ b/portal-frontend/src/app/shared/header/header.component.scss
@@ -58,6 +58,7 @@ header {
       .title,
       .title h5 {
         display: flex;
+        margin-bottom: rem(5) !important;
       }
 
       .controls {
