update background colour

--- a/portal-frontend/src/app/shared/footer/footer.component.scss
+++ b/portal-frontend/src/app/shared/footer/footer.component.scss
@@ -4,7 +4,7 @@
 
 footer {
   @extend .body-text;
-  background-color: $accent-color;
+  background-color: $secondary-color;
   color: $white;
 
   .trademark {
