landing page, layout adjustments

--- a/portal-frontend/src/app/shared/header/header.component.html
+++ b/portal-frontend/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
     </div>
 
     <div *ngIf="isAuthenticated && isMenuOpen" class="mobile-menu-wrapper">
-      <h1 routerLink='/home'>Portal Inbox</h1>
+      <h1 (click)="onMenuClicked('/home')">Portal Inbox</h1>
       <h1 (click)="onLogout()">Log Out</h1>
     </div>
 
