--- a/portal-frontend/src/app/features/login/login.component.html
+++ b/portal-frontend/src/app/features/login/login.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="login-wrapper">
   <h3>Welcome to the ALCS Application Portal</h3>
   <br />
   <button (click)='onLogin()' mat-flat-button color='primary'>Login with BCeID</button>
