--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -1,6 +1,16 @@
 <div>
   <div class="header-row">
-    <h3>Application Inbox</h3>
+    <h3>Portal Inbox</h3>
+    <p>
+      Create and manage your Applications, Notice of Intent, and Notification of SRW.
+    </p>
+    <div class="learn-more-wrapper">
+      <div class="learn-more-ctr" color="accent" (click)="onLearnMoreClick()">LEARN
+        MORE<mat-icon>{{isLearnMoreOpen ? 'expand_less' : 'expand_more'}}</mat-icon></div>
+      <div *ngIf="isLearnMoreOpen">
+        <app-landing-page [isControlsVisible]="false"></app-landing-page>
+      </div>
+    </div>
     <div>
       <button (click)="onCreateApplication()" color="accent" mat-flat-button>Create Application</button>
     </div>
