--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -1,6 +1,11 @@
 <div>
   <div class="header-row">
-    <h3>Portal Inbox</h3>
+    <diV class="title">
+      <h3>Portal Inbox</h3>
+      <button class="btn" (click)="onCreateApplication()" color="accent" mat-flat-button>
+        + Create New
+      </button>
+    </diV>
     <p>
       Create and manage your Applications, Notice of Intent, and Notification of SRW.
     </p>
@@ -12,7 +17,9 @@
       </div>
     </div>
     <div>
-      <button (click)="onCreateApplication()" color="accent" mat-flat-button>Create Application</button>
+      <button class="mobile-btn" (click)="onCreateApplication()" color="accent" mat-flat-button>
+        + Create New
+      </button>
     </div>
   </div>
   <div>
