--- a/portal-frontend/src/styles/colors.scss
+++ b/portal-frontend/src/styles/colors.scss
@@ -2,13 +2,13 @@ $primary-color: #065a2f;
 $primary-color-dark: #002f17;
 $primary-color-light: #94c6ac;
 
-$secondary-color: #ba5a27;
-$secondary-color-dark: #83360d;
-$secondary-color-light: #f8c0a3;
+$secondary-color: #194767;
+$secondary-color-dark: #0c2e46;
+$secondary-color-light: #acd2ed;
 
-$accent-color: #194767;
-$accent-color-dark: #0c2e46;
-$accent-color-light: #acd2ed;
+$accent-color: #ba5a27;
+$accent-color-dark: #83360d;
+$accent-color-light: #f8c0a3;
 
 $black: #000000;
 $white: #ffffff;
