Add ParcelLookups and Controller
* Add ParcelLookup entity that matches GIS teams export
* Add controller / service to perform lookups
* Add front end form / component for performing lookup

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -3,6 +3,7 @@
     <div class="header">
       <h6>Application ID: {{ fileId }} | {{ applicationType }}</h6>
     </div>
+    <app-parcel-entry></app-parcel-entry>
     <form [formGroup]="firstForm">
       <div class="form-row">
         <div>
