--- a/portal-frontend/src/app/features/landing-page/landing-page.component.html
+++ b/portal-frontend/src/app/features/landing-page/landing-page.component.html
@@ -17,14 +17,15 @@
         Section 35 of the <i>Agricultural Land Reserve Use Regulation</i>. All notices are subject to a $150 fee.
     </li>
     <li>
-        Notification of SRW: <a target="_blank"
-            href="https://www.alc.gov.bc.ca/application-and-notice-process/statutory-right-of-way-notice/">Create a
+        Notification of SRW: Create a <a target="_blank"
+            href="https://www.alc.gov.bc.ca/application-and-notice-process/statutory-right-of-way-notice/">
             Notification of Statutory Right of Way (SRW)</a> if you are notifying the ALC that you are planning to
-        register a SRW under section 218 of the <i>Land Title Act</i> in accordance with section 18.1 (2) of the <i>Agricultural
-        Land Commission Act</i>.
+        register a SRW under section 218 of the <i>Land Title Act</i> in accordance with section 18.1 (2) of the
+        <i>Agricultural
+            Land Commission Act</i>.
     </li>
 </ul>
 
-<div class="center inbox-btn-wrapper">
+<div *ngIf="isControlsVisible" class="center inbox-btn-wrapper">
     <button routerLink='/home' mat-flat-button color="primary">Continue to inbox</button>
 </div>
